# mosaicfs

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.mosaicfs  Dockerfile.mosaicfs-db  Makefile  README.md  agent.toml.example  docker-compose.yml  mosaicfs.toml.example  test-fuse-mount.sh
.claude/: settings.json
.claude/skills/admin-crud/: SKILL.md
.claude/skills/architect/: SKILL.md  inventory.sh
.claude/skills/decisions/: SKILL.md
.claude/skills/inventory/: SKILL.md
.claude/skills/ui-crud/: SKILL.md
.devcontainer/: Dockerfile  Dockerfile.web  devcontainer.json  docker-compose.yml
deploy/: mosaicfs.yaml
deploy/systemd/: install.sh  mosaicfs.example.toml  mosaicfs.service
desktop/: Cargo.toml  Entitlements.plist  build.rs  mosaicfs-desktop.sb  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: agent.rs  bookmarks.rs  commands.rs  connection.rs  lib.rs  macos.rs  main.rs  server.rs  settings.rs  stub.rs  watch_paths.rs
desktop/ui/: agent.html  setup.html
docs/: MacOS-Seatbelt.md  Makefile  MosaicFS-implementation-plan-updates.md  MosaicFS-implementation-plan.md  architecture.md  implementation-plan.md  old-implementation-plan.md  replication-plugin-design.md  review-comments-1.md  tauri-desktop-app.md
docs/architecture/: 01-high-level.md  02-design-decisions.md  03-security.md  04-federation.md  05-data-model.md  06-document-schemas.md  07-vfs-access.md  08-authentication.md  09-rest-api.md  10-backup.md  11-agent-crawl.md  12-rule-engine.md  13-plugins.md  14-search.md  15-vfs-cache.md  16-deployment.md  17-observability.md  18-storage-backends.md  19-web-ui.md  20-open-questions.md
docs/changes/001/: CLAUDE.md  architecture.md  design-notes.md  review-clarification.md  review-feedback.md  review.md
docs/changes/002/: architecture.md  technical_details.md
docs/changes/003/: architecture.md  design-notes.md
docs/changes/004/: architecture.md
docs/changes/005/: architecture.md  design_notes.md
docs/changes/006/: architecture.md
docs/changes/007/: architecture.md
docs/changes/008/: discussion.md
docs/changes/009/: architecture.md  file-browser-requirements.md
docs/changes/010/: architecture-doc.patch  architecture.md  discussion.md  file-browser-requirements.md  session-ses_2589.md
docs/deployment/: linux-host.md
docs/future/: annotations.md  plugins.md  replication.md
mosaicfs/: Cargo.toml
mosaicfs-agent/: Cargo.toml
mosaicfs-agent/src/: config.rs  couchdb.rs  crawler.rs  file_server.rs  init.rs  lib.rs  main.rs  node.rs  notifications.rs  replication.rs  replication_subsystem.rs  start.rs  watch_path_provider.rs
mosaicfs-agent/src/backend/: agent_target.rs  directory.rs  mod.rs  s3.rs
mosaicfs-common/: Cargo.toml
mosaicfs-common/bindings/: AccessDocument.ts  AccessSource.ts  AgentStatusType.ts  AnnotationDocument.ts  CloudSnapshot.ts  ConflictPolicy.ts  CredentialDocument.ts  CredentialPermissions.ts  FileStatus.ts  FilesystemDocument.ts  FilesystemType.ts  LabelAssignmentDocument.ts  LabelAssignmentType.ts  LabelRuleDocument.ts  LabelRuleType.ts  MigratedFrom.ts  MountSource.ts  MountStrategy.ts  NetworkMount.ts  NodeAvailability.ts  NodeDocument.ts  NodeStatus.ts  NotificationAction.ts  PluginType.ts  QueryEndpoint.ts  ReplicaDocument.ts  ReplicaType.ts  ReplicationRuleDocument.ts  Step.ts  StorageBackendType.ts  TransferConfig.ts  UtilizationSnapshotDocument.ts  VirtualDirectoryDocument.ts
mosaicfs-common/src/: backend.rs  config.rs  couchdb.rs  documents.rs  lib.rs  machine_id.rs  notifications.rs  replication.rs  secrets.rs  steps.rs
mosaicfs-server/: Cargo.toml
mosaicfs-server/assets/: browse_open.js  browse_open.test.html
mosaicfs-server/src/: access_cache.rs  couchdb.rs  credentials.rs  label_cache.rs  lib.rs  main.rs  notifications.rs  readdir.rs  readdir_cache.rs  routes.rs  start.rs  state.rs  tls.rs
mosaicfs-server/src/admin/: actions.rs  mod.rs  views.rs
mosaicfs-server/src/auth/: hmac_auth.rs  jwt.rs  mod.rs
mosaicfs-server/src/handlers/: agent.rs  files.rs  labels.rs  mod.rs  nodes.rs  notifications.rs  replication.rs  search.rs  system.rs  vfs.rs
mosaicfs-server/src/ui/: actions.rs  browse.rs  mod.rs  open.rs  views.rs
mosaicfs-server/templates/: bootstrap.html  browse.html  browse_app.html  browse_list.html  layout.html  login.html  node_detail.html  nodes.html  nodes_panel.html  notifications.html  notifications_panel.html  replication.html  replication_panel.html  settings_backup.html  settings_credentials.html  status.html  status_panel.html  storage_backends.html  vfs.html  vfs_dir.html  vfs_new.html
mosaicfs-vfs/: Cargo.toml
mosaicfs-vfs/src/: block_map.rs  cache.rs  couchdb.rs  filesystem_view.rs  fuse_check.rs  fuse_fs.rs  inode.rs  lib.rs  readdir.rs  reconciliation.rs  start.rs  tiered_access.rs  watcher.rs
mosaicfs/src/: main.rs  sandbox.rs
mosaicfs/tests/: sandbox_linux.rs
plans/: integration-testing.md  phase-8.md
scripts/: restart-dev-environment  start-dev-environment  stop-dev-environment  test-dev-environment  watch-dev-server
tests/: docker-compose.integration.yml
tests/integration/: helpers.sh  run.sh  test_01_bootstrap.sh  test_02_agent.sh  test_03_crawl.sh  test_04_labels.sh  test_05_vfs.sh  test_06_replication.sh  test_07_notifications.sh  test_08_events.sh  test_09_backup.sh  test_10_edge_cases.sh
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: credentials.spec.ts  file-browser.spec.ts  helpers.ts  labels.spec.ts  live-sync.spec.ts  login.spec.ts  responsive.spec.ts  search.spec.ts  vfs-editor.spec.ts
web/src/: App.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/tests/: auth.test.tsx  dashboard.test.tsx  file-detail.test.tsx  file-table.test.tsx  fixtures.ts  format.test.ts  label-chip.test.tsx  labels-page.test.tsx  node-detail.test.tsx  nodes-page.test.tsx  notification-panel.test.tsx  pouchdb-hooks.test.ts  search-results.test.tsx  search.test.tsx  setup.ts  step-editor.test.tsx
(+63 files in other folders)
