[workspace]
members = [
    "mosaicfs-common",
    "mosaicfs-agent",
    "mosaicfs-server",
    "mosaicfs-vfs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
anyhow = "1"
mime_guess = "2"
thiserror = "1"
urlencoding = "2"
bytes = "1"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
