[workspace]

[package]
name = "mosaicfs-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "mosaicfs_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSData", "NSString", "NSError"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSOpenPanel",
    "NSPanel",
    "NSResponder",
    "NSSavePanel",
    "NSWindow",
    "NSWorkspace",
] }
