[package]
name = "mosaicfs-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
bytes = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
hostname = "0.4"
tempfile = "3"
