[package]
name = "mosaicfs-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
glob = "0.3"
regex = "1"
async-trait = "0.1"
bytes = "1"
