[package]
name = "mosaicfs-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
keyring = { version = "3", features = ["apple-native"] }
glob = "0.3"
regex = "1"
async-trait = "0.1"
bytes = "1"
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
