[package]
name = "mosaicfs-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
