[package]
name = "mosaicfs-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
password-hash = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
