[package]
name = "mosaicfs-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
fuser = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
hmac = "0.12"
regex = "1"
libc = "0.2"
urlencoding = { workspace = true }

[dev-dependencies]
tempfile = "3"
