[package]
name = "mosaicfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
mosaicfs-server = { path = "../mosaicfs-server" }
mosaicfs-agent  = { path = "../mosaicfs-agent" }
mosaicfs-vfs    = { path = "../mosaicfs-vfs" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustls = "0.23"
