[package]
name = "mosaicfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["vfs"]
vfs = ["dep:mosaicfs-vfs", "mosaicfs-vfs/fuse"]

[dependencies]
mosaicfs-common = { path = "../mosaicfs-common" }
mosaicfs-server = { path = "../mosaicfs-server" }
mosaicfs-agent  = { path = "../mosaicfs-agent" }
mosaicfs-vfs    = { path = "../mosaicfs-vfs", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustls = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
landlock     = "0.4"
caps         = "0.5"
libc         = "0.2"
seccompiler  = "0.5"

[[test]]
name    = "sandbox_linux"
path    = "tests/sandbox_linux.rs"
harness = false
